2006-06-21  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/structural_properties.c (igraph_reciprocity) :
	bug corrected

2006-06-21  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/*.c : modified docstrings to be conform to
	the epydoc formatting conventions. Now the whole Python API
	documentation can be generated with epydoc.

2006-06-17  Gabor Csardi  <csardi@kzoo.edu>

	* src/games.c (igraph_nonlinear_barabasi_game)
	(igraph_barabasi_aging_game, igraph_recent_degree_aging_game)
	(igraph_recent_degree_aging_game) : added zero_appeal argument

2006-06-16  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/structural_properties.c (igraph_reciprocity) : added
	* examples/simple/igraph_reciprocity.c : added
	* interfaces/python/graphobject.c
	(igraphmodule_Graphobject_reciprocity) : added

2006-06-14  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/random.c, src/random.h : avoids calling srand(time(0))
	multiple times

2006-06-12  Gabor Csardi  <csardi@kzoo.edu>

	* src/measure_dynamics.c (igraph_measure_dynamics_citedcat_id_age) :
	significance calculation added

	* src/measure_dynamics.c (igraph_measure_dynamics_citingcat_id_age)
	(igraph_mesaure_dynamics_citingcat_id_age_st) : added
	
2006-06-11  Gabor Csardi  <csardi@kzoo.edu>

	* src/types.h (igraph_array3_t, ARRAY3) : added
	* src/array.c (igraph_array3_init, igraph_array3_destroy)
	(igraph_array3_size, igraph_array3_n, igraph_array3_resize)
	(igraph_array3_null) : added
	* examples/simple/igraph_array.c :added

	* src/measure_dynamics.c (igraph_measure_dynamics_idage) : 
	slight change, first update A(k,l) and then add the edges 

	* src/measure_dynamics.c (igraph_measure_dynamics_citedcat_id_age)
	(igraph_measure_dynamics_citedcat_id_age_st) : added

2006-06-05  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/graphobject.c (igraphmodule_Graph_Adjacency,
	igraphmodule_Graph_Establishment, igraphmodule_Graph_Isoclass,
	igraphmodule_Graph_isoclass, igraphmodule_Graph_isomorphic,