@@ -254,8 +254,63 @@ graph.laplacian <- function(graph, normalized=FALSE) {
   M
 }
 
-# Structural holes a'la Burt, code contributed by
-# Jeroen Bruggeman
+## Structural holes a'la Burt, code contributed by
+## Jeroen Bruggeman
+
+## constraint <- function(graph, nodes=V(graph)) {
+
+##   if (!is.igraph(graph)) {
+##     stop("Not a graph object")
+##   }
+
+##   idx <- degree(graph) != 0
+##   A <- get.adjacency(graph)
+##   A <- A[idx, idx]
+##   n <- sum(idx)
+  
+##   one <- c(rep(1,n))
+##   CZ <- A + t(A)
+##   cs <- CZ %*% one
+##   ics <- 1/cs
+##   CS <- ics %*% t(one)
+##   P <- CZ * CS  #intermediate result: proportionate tie strengths
+##   PSQ <- P%*%P #sum paths of length two
+##   P.bi <- as.numeric(P>0)  #exclude paths to non-contacts (& reflexive):
+##   PC <- (P + (PSQ*P.bi))^2  #dyadic constraint
+##   ci <- PC %*% one      #overall constraint
+##   dim(ci) <- NULL
+
+##   ci2 <- numeric(vcount(graph))
+##   ci2[idx] <- ci
+##   ci2[!idx] <- NaN
+##   ci2[nodes+1]
+## }
+
+## Second implementation
+
+## constraint <- function(graph, nodes=V(graph)) {
+
+##   if (!is.igraph(graph)) {
+##     stop("Not a graph object")
+##   }
+
+##   nodes <-as.numeric(nodes)
+  
+##   weights <- 1/degree(graph)
+##   res <- numeric(length(nodes))
+##   for (i in seq(along=nodes)) {
+##     res[i] <- res[i] + weights[nodes[i]+1]
+##     first <- neighbors(graph, nodes[i], mode="all")
+##     first <- first [ first != nodes[i] ]
+##     for (j in seq(along=first)) {
+##       second <- neighbors(graph, first[j], mode="all")
+##       second <- second [ second %in% first ]
+##       res[i] <- res[i] + sum(weights[first[j]+1] * weights[second+1])
+##     }
+##   }
+##   res [ res == Inf ] <- NaN
+##   res
+## }
 
 constraint <- function(graph, nodes=V(graph)) {
 
@@ -263,26 +318,6 @@ constraint <- function(graph, nodes=V(graph)) {
     stop("Not a graph object")
   }
 
-  idx <- degree(graph) != 0
-  A <- get.adjacency(graph)
-  A <- A[idx, idx]
-  n <- sum(idx)
-  
-  one <- c(rep(1,n))
-  CZ <- A + t(A)
-  cs <- CZ %*% one
-  ics <- 1/cs
-  CS <- ics %*% t(one)
-  P <- CZ * CS  #intermediate result: proportionate tie strengths
-  PSQ <- P%*%P #sum paths of length two
-  P.bi <- as.numeric(P>0)  #exclude paths to non-contacts (& reflexive):
-  PC <- (P + (PSQ*P.bi))^2  #dyadic constraint
-  ci <- PC %*% one      #overall constraint
-  dim(ci) <- NULL
-
-  ci2 <- numeric(vcount(graph))
-  ci2[idx] <- ci
-  ci2[!idx] <- NaN
-  ci2[nodes+1]
+  .Call("R_igraph_constraint", graph, as.igraph.vs(nodes),
+        PACKAGE="igraph")
 }
-
